# azure-n8n-server

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  DEPENDENCIES.md  MEMORY_CONFIGURATION.md  README.md  settings.json.backup2  settings.local.json
.claude/agent-memory/: MEMORY.md  README.md
.claude/agent-memory/builder/: MEMORY.md
.claude/agent-memory/explorer/: MEMORY.md
.claude/agent-memory/validator/: MEMORY.md
.claude/agents/: meta-agent.md  work-completion-summary.md
.claude/agents/team/: builder.md  pre-flight.md  test-runner.md  validator.md
.claude/commands/: plan.md  plan_w_team.md  prime_tts.md  scaffold.md
.claude/hooks/: HOOK_TEST_REPORT.md  notification.py  permission_request.py  post_tool_use.py  post_tool_use_failure.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  setup.py  stop.py  subagent_start.py  subagent_stop.py  user_prompt_submit.py
.claude/hooks/utils/llm/: anth.py  task_summarizer.py
.claude/logs/: chat.json  notification.json  permission_request.json  post_tool_use.json  post_tool_use_failure.json  pre_tool_use.json  session_end.json  session_start.json  status_line.json  stop.json  subagent_stop.json  user_prompt_submit.json
.claude/output-styles/: tts-summary.md
.claude/status_lines/: status_line.py  status_line_v2.py  status_line_v3.py  status_line_v4.py
.github/actions/setup-terraform/: action.yml
.github/scripts/: parse-plan.py  post-apply-validation.sh  run-hook.sh  update-status-line.sh
.github/workflows/: terraform-deploy.yml  terraform-hooks-integration.yml  terraform-pr-checks.yml
infra/: .checkov.yaml  .tflint.hcl  terraform.tfvars.example
infra/bootstrap-hcp/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/environments/production/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/environments/staging/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/compute/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/governance/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/landing-zone/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/networking/: README.md  main.tf  outputs.tf  variables.tf
infra/modules/security/: README.md  main.tf  outputs.tf  variables.tf
specs/: azure-landing-zone-foundation-setup.md  github-actions-workflow-with-hooks-first-iteration.md  infra-reorganization-and-hcp-bootstrap.md
